--- a/Microservatops/Microservatops/Microservatops.csproj
+++ b/Microservatops/Microservatops/Microservatops.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dinosaur.cs" />
+    <Compile Include="DinosaurRepository.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
