--- a/Microservatops/Microservatops/packages.config
+++ b/Microservatops/Microservatops/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Nancy" version="1.4.4" targetFramework="net452" />
   <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net452" />
+  <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net452" />
 </packages>
