T-Rest & Angularsaurus: Front end adds dino to database

--- a/Microservatops/Microservatops/Microservatops.csproj
+++ b/Microservatops/Microservatops/Microservatops.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DatabaseAdapter.cs" />
     <Compile Include="Dinosaur.cs" />
     <Compile Include="DinosaurRepository.cs" />
     <Compile Include="Program.cs" />
